--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,16 +31,16 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">6.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">7.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="2">FirstTestNgClass</td><td><a href="#m1"><b>getTitle</b>  </a></td><td class="numi">1</td><td>1627367103303</td><td class="numi">208</td></tr><tr class="passedodd"><td><a href="#m2"><b>setup</b>  </a></td><td class="numi">1</td><td>1627367097500</td><td class="numi">5801</td></tr>
+<tr><th colspan="4">Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="2">test.FirstTestNgClass</td><td><a href="#m1"><b>getTitle</b>  </a></td><td class="numi">1</td><td>1627367530587</td><td class="numi">924</td></tr><tr class="passedodd"><td><a href="#m2"><b>setup</b>  </a></td><td class="numi">1</td><td>1627367523930</td><td class="numi">6654</td></tr>
 </table>
-<h1>Default test</h1>
-<h2 id="m1">FirstTestNgClass:setup</h2>
+<h1>Test</h1>
+<h2 id="m1">test.FirstTestNgClass:setup</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">FirstTestNgClass:getTitle</h2>
+<h2 id="m2">test.FirstTestNgClass:getTitle</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
